
This file shows the changes in recent releases of MODx. The most current release is usually the 
development release, and is only shown to give an idea of what's currently in the pipeline.

MODx Revolution 2.0.1-rc1
====================================
- [#MODX-2210] Added strip for xss in manager a variable
- [#MODX-2205] Fixed issue with saving resources with resource fields having html and unescaped content
- [#MODX-2198] Fixed directory checks on context web path for advanced distribution
- [#MODX-2194] Fixed issue with modLexicon::fetch not working if a prefix is set
- Removed SVN commit log from top header now that we're in Git
- Adjusted version to 2.0.1-rc1

MODx Revolution 2.0.0-pl  (LastChangedRevision: 7216, LastChangedDate: 2010-07-21 09:10:12 -0500 (Thu, 21 Jul 2010))
====================================
- [#MODX-2159] Fixed bug where richtext_default was being ignored in Quick Create
- [#MODX-2174] Fixed bug where manager_language was being ignored in Connectors, check for ctx init
- [#MODX-1715] Added reference to setting keymap_save to allow for overriding of save shortcut key
- [#MODX-2008] Updated Russian and Japanese translations
- [#MODX-2008] Added in Thai translation
- Fixed typo in filters english lexicon
- [#MODX-2008] Added in French translation, updated German translation
- [#MODX-2173] Fixed issue with IE and package installation wizard
- Fixed setup directory checks for advanced builds
- Fixed incorrect welcome URL in build
- [#MODX-2008] Added in Czech translation
- Configured phpdoc.ini file for SDK build
- Fixed bug in file tree where URL was absolute rather than relative when being drag/dropped
- Added OnFileEditFormPrerender event to allow plugins to fire on file editing form
- [#MODX-2172] Fixed bug where tooltips for stay buttons were behind window
- Sanity checks to tv render directories
- Removed deprecated CSS icon reference
- [#MODX-2169] Fixed bug with TV default values, inheriting and non-linear TV inputs